[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.144"
env = "0.0.0"
chrono = "0.4.22"
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = { version = "2.1", features = ["tokio-sync"] }
